@@ -124,6 +124,14 @@ static int probe_mod_file(demux_mod_t *this) {
     return 1;
   }
 
+  /* ScreamTracker 2 */
+  if (!memcmp (header.buffer + 20, "!Scream!", 7))
+    return 1;
+
+  /* ScreamTracker 3 */
+  if (_X_ABE_32(header.values + 0x2C / sizeof (uint32_t)) == FOURCC_32('S', 'C', 'R', 'M'))
+    return 1;
+
   return 0;
 }
 
